# turkish-ai-detector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
turkish_ai_detector/: __init__.py  __main__.py  curvature.py  defaults.py  document.py  pipeline.py  probability.py  segmentation.py
